--- a/JS/forIn:forOf.html
+++ b/JS/forIn:forOf.html
@@ -64,7 +64,7 @@
       }
       /*===================for:in===================*/
       /*===================for:of===================*/
-      console.log('===================for:of===================')
+      console.log('===================for:of=====================')
       let arrOf = [1, 2, 3, 4, 5]
       arrOf.name = 'ArrOf'
       arrOf.getName = function () {
