--- a/JS/快速掌握 JS 面试题之原型和原型链.html
+++ b/JS/快速掌握 JS 面试题之原型和原型链.html
@@ -14,6 +14,7 @@
       )
       class Person {
         constructor(name) {
+          //构造函数
           this.name = name
         }
         drink() {
