使用class实现继承

--- a/JS/使用class实现继承.html
+++ b/JS/使用class实现继承.html
@@ -6,7 +6,7 @@
     </title>
   </head>
   <body>
-    <div>快速掌握 JS 面试题之原型和原型链</div>
+    <div>使用class实现继承</div>
     <pre></pre>
     <script>
       console.log(
