--- a/JS/js原型和原型链保姆级教学(纯理论).html
+++ b/JS/js原型和原型链保姆级教学(纯理论).html
@@ -41,13 +41,44 @@
 
     <div>经典原型和原型链分析</div>
     <img style="width: 800px;" src="经典原型和原型链分析.png" />
-    <div style="border: 3px dashed red;">
+    <div style="border: 3px solid red;">
       (1)函数.prototype
       <pre>
         函数都是对象，每个函数都有自带属性prototype
         每个函数下都有prototype属性，prototype的属性值是一个对象，prototype又只有一个constructor属性，指向这个函数本身
       </pre>
       <img style="width: 800px;" src="函数.prototype.png" />
+    </div>
+    <div style="border: 3px dashed rgb(100, 54, 121);">
+      (2)对象._proto_
+      <pre>
+       结论：每个对象都有隐式属性叫_proto_
+       [[prototype]]是对象的一个内部属性，它可以看作是对象的_proto_属性
+       _proto_就是构造该对象的函数的prototype的属性
+        testObject._proto_=testFn.prototype
+      </pre>
+      <img style="width: 800px;" src="函数.prototype.png" />
+    </div>
+    <div style="border: 3px dashed pink;">
+      (3)函数._proto_
+      <pre>
+        在javascript中，函数都是对象，对象就都会有_proto_
+        解释：Function是最顶级的构造器，函数对象都是通过它构造的
+        结论：函数._proto_===Function.prototype
+      </pre>
+      <img style="width: 800px;" src="函数._proto_.png" />
+    </div>
+    <div style="border: 3px dashed rgb(188, 202, 188);">
+      (4)函数.prototype._proto_
+      <pre>
+        函数.prototype本质上是一个空对象，由new Object()创建的。
+        结论：函数.prototype._proto_=Object.prototype
+        (谁创建了这个对象 这个对象的隐式原型就指向 创建它的函数的显示原型)
+      </pre>
+    </div>
+    <div style="border: 3px dashed rgb(72, 75, 49);">
+      (5)Object._proto_
+      <pre>对象是由函数构造的，所以Object._proto_==Function.prototype</pre>
     </div>
     <script>
       //   自定义对象
@@ -63,8 +94,10 @@
       console.log(
         'instanceof常见的不够准确的描述：判断一个对象是否是某个构造函数的实例',
       )
-      function fnTest() {}
+      function fnTest() {} //(2)对象._proto_
       var testmyfn = new fnTest()
+      console.log('🚀 ~ (2)对象._proto_', testmyfn)
+      console.log(fnTest.prototype)
       console.log('testmyfn instanceof fnTest', testmyfn instanceof fnTest)
     </script>
   </body>
