--- a/JS/(用于sbdArticleCategory)数组分类2.html
+++ b/JS/(用于sbdArticleCategory)数组分类2.html
@@ -69,7 +69,7 @@
           storeCategoryArr[item.DataCategoryGroupName].push(item)
         }
       })
-      console.log('storeCategoryArr', storeCategoryArr)
+      console.log('storeCategoryArr', storeCategoryArr) /*得到分类好的items*/
       var mapCategoryName = arr
         .map((item) => {
           return item.DataCategoryGroupName
