--- a/sbd code理解/对于alert代码的理解.html
+++ b/sbd code理解/对于alert代码的理解.html
@@ -442,7 +442,7 @@
     <script>
       var SBD_INTERVAL_TIME_LABEL = 5000
       var SBD_INTERVAL_TIME_CLICK_LABEL = 10000
-      var timer
+      //var timer
       var alert = [
         {
           alertId: 'a0n3K000000aciCQAQ',
