--- a/CSS/CSS表格/3.表格颜色和背景定义.html
+++ b/CSS/CSS表格/3.表格颜色和背景定义.html
@@ -9,6 +9,9 @@
     <style>
       table {
         /* background-color: rgb(209, 176, 176);*/
+        background: url(Desktop.jpeg);
+        width: 100%;
+        background-size: 100% 100%;
       }
       /*  table tbody tr:first-child {
         background-color: rgb(137, 146, 124);
