--- a/HTML全套基础教程-html实战开发-深入浅出HTML/ 008图片和超链接.html
+++ b/HTML全套基础教程-html实战开发-深入浅出HTML/ 008图片和超链接.html
@@ -2,7 +2,7 @@
   <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>
-      008图片
+      008图片和超链接
     </title>
   </head>
   <body>
@@ -15,7 +15,6 @@
     <div>
       设置图片宽度就行，高度会等比缩放; alt="cannot find"
       图片加载失败时会显示该信息
-      <a href="007背景颜色和图片.html">007背景颜色和图片</a>
       <a href="007背景颜色和图片.html">
         <img
           src="desktop_60.png"
@@ -24,6 +23,7 @@
           alt="cannot find"
         />
       </a>
+      超链接的作用
     </div>
   </body>
 </html>
