--- a/HTML全套基础教程-html实战开发-深入浅出HTML/008图片和超链接.html
+++ b/HTML全套基础教程-html实战开发-深入浅出HTML/008图片和超链接.html
@@ -23,7 +23,10 @@
           alt="cannot find"
         />
       </a>
-      超链接的作用
+    </div>
+    <div>
+      超链接的作用:通过超链接可以从浏览器向服务器发送请求
+      b/s结构系统：每一个请求都会对应一个响应 b--->请求 s--->响应
     </div>
   </body>
 </html>
