--- a/HTML全套基础教程-html实战开发-深入浅出HTML/011表单.html
+++ b/HTML全套基础教程-html实战开发-深入浅出HTML/011表单.html
@@ -17,7 +17,7 @@
       密码：
       <input type="password" name="password" />
       <!-- type="submit" 表示这个按钮可以提交表单 对于按钮来说 这个value指定按钮上显示的文本信息-->
-      <input type="submit" value="Submit" name="SubmitName" />
+      <input type="submit" value="Submit" />
       <input type="reset" value="Reset" />
     </form>
   </body>
