--- a/HTML全套基础教程-html实战开发-深入浅出HTML/012注册表单的实现.html
+++ b/HTML全套基础教程-html实战开发-深入浅出HTML/012注册表单的实现.html
@@ -22,10 +22,10 @@
     <div>
       form
       method="post",数据会更安全，url上面不会显示参数，但是get方法（默认）会显示在地址栏。超链接是get请求。
-      post提交的请求还是能够得到mae=value这样的形式
+      post提交的请求还是能够得到name=value这样的形式
     </div>
     <!-- action属性用于制定服务器地址，制定数据提交给哪个服务器，向服务器发送请求 -->
-    <form action="008图片和超链接.html" method="post">
+    <form action="008图片和超链接.html" method="get">
       用户名：
       <input type="text" name="username" />
       <br />
