--- a/HTML全套基础教程-html实战开发-深入浅出HTML/014readonlyAnddisabled.html
+++ b/HTML全套基础教程-html实战开发-深入浅出HTML/014readonlyAnddisabled.html
@@ -7,7 +7,7 @@
     style="
       background: linear-gradient(
         0deg,
-        rgba(34, 193, 195, 1) 0%,
+        rgb(44, 188, 190) 0%,
         rgba(253, 187, 45, 1) 100%
       );
     "
