--- a/第十章--对象/3对象的引用传址.html
+++ b/第十章--对象/3对象的引用传址.html
@@ -7,6 +7,11 @@
     <title>3对象的引用传址</title>
   </head>
   <body>
+    <div>
+      3.引用类型与基本类型的差别 变量全部都存储到栈内存
+      引用类型（Object）存储的是堆内存地址 基本类型存储的是值本身（栈内存）
+      引用对象比较的是内存地址是否相同，基本类型比较的是值本身
+    </div>
     <script>
       let user = { name: 'ava' }
       let hd = user
