--- a/第十章--对象/4使用展示语法完成参数合并.html
+++ b/第十章--对象/4使用展示语法完成参数合并.html
@@ -7,6 +7,12 @@
     <title>4使用展示语法完成参数合并</title>
   </head>
   <body></body>
+    <div
+      style="
+        background-image: linear-gradient(to left bottom, #5d7599, #0095c3, #00b6ce, #00d4af, #12eb6e);height:100vh;
+      "
+    ></div>
+  </body>
   <script>
     let arr = [1, 2, 3, 45]
     let a = [...arr, 5, 6, 7]
