--- a/CSS/CSS浮动布局/P11 11 后盾人页面结构分析.html
+++ b/CSS/CSS浮动布局/P11 11 后盾人页面结构分析.html
@@ -4,6 +4,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>P11 11 后盾人页面结构分析</title>
+    <link rel="stylesheet" href="P11 11 后盾人页面结构分析.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="www.baidu.com">baidu</a></li>
+        </ul>
+        <div class="button">注册</div>
+      </nav>
+    </header>
+    <main>
+      <article>Ava</article>
+      <aside></aside>
+    </main>
+    <footer><div>hello JS CSS</div></footer>
+  </body>
 </html>
