--- a/CSS/CSS浮动布局/P14 14 环绕距离控制.html
+++ b/CSS/CSS浮动布局/P14 14 环绕距离控制.html
@@ -11,7 +11,15 @@
     <p>
       <span class="shape"></span>
       Never waste Hours on finding the perfect Color Palette again! JUST ENTER A
-      COLOR! And Generate nice Color Palettes
+      COLOR! And Generate nice Color Palettes Never waste Hours on finding the
+      perfect Color Palette again! JUST ENTER A COLOR! And Generate nice Color
+      Palettes Never waste Hours on finding the perfect Color Palette again!
+      JUST ENTER A COLOR! And Generate nice Color Palettes Never waste Hours on
+      finding the perfect Color Palette again! JUST ENTER A COLOR! And Generate
+      nice Color Palettes Never waste Hours on finding the perfect Color Palette
+      again! JUST ENTER A COLOR! And Generate nice Color Palettes Never waste
+      Hours on finding the perfect Color Palette again! JUST ENTER A COLOR! And
+      Generate nice Color Palettes
     </p>
   </body>
 </html>
