--- a/CSS/CSS定位布局/3绝对定位.html
+++ b/CSS/CSS定位布局/3绝对定位.html
@@ -5,7 +5,7 @@
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>P2 2 使用相对定位操作元素</title>
+      <title>3绝对定位</title>
       <style>
             * {
                   padding: 0;
@@ -17,13 +17,15 @@
                   height: 400px;
                   border: solid 1px #555;
                   padding: 20px;
+                  position: fixed;/*父元素有position属性 那么子元素的position: absolute; 参照的是父元素*/
             }
 
             p img {
                   width: 100px;
                   height: 100px;
-                  position: relative;
+                  position: absolute;/*position: absolute; 参照的是页面 而不是p元素*/
                   top: 20px;
+                  right: 0px;
             }
       </style>
 </head>
