--- a/CSS/CSS定位布局/P9 9 定位叠加很重要.html
+++ b/CSS/CSS定位布局/P9 9 定位叠加很重要.html
@@ -41,6 +41,8 @@
       }
       div > h2 {
         text-align: center;
+        line-height: 5em;
+        color: blanchedalmond;
       }
     </style>
   </head>
